# website

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker_start.sh  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tweets.db
agent/: agent.py  context.py  llm_singleton.py
components/: atb.py  brand_link.py  chat_box.py  css_gradients.py  education_card.py  fa.py  favicon_link.py  footer.py  gradient.css  home_btn.py  home_text.py  markdown.py  nav_bar.py  page_footer.py  title.py  tweet_list.py
content/: catch_phrase.md  education.json  llm_context.md  resume.md  suggested_questions.json
llm/: agent.py  client.py  context.py
llm_agent/: agent.py  llm_singleton.py
nbs/: llama_cpp_playground.ipynb  sync_liked_tweets.ipynb  sync_liked_tweets.py
requirements/: common.txt  dev.txt
tweets/: tweet.py  tweets.db  tweets.py  tweets_db.py
vps_setup/: nginx.conf  server_setup.sh
